--- a/app/src/main/res/layout/fragment_create_overview.xml
+++ b/app/src/main/res/layout/fragment_create_overview.xml
@@ -12,6 +12,8 @@
         android:layout_marginStart="30dp"
         android:layout_marginEnd="50dp">
 
+
+
         <TextView
             android:id="@+id/textName"
             android:layout_width="wrap_content"
@@ -92,7 +94,18 @@
             android:src="@drawable/ic_add"
             android:text="+" />
 
+
+
     </RelativeLayout>
+
+    <ImageView
+        android:layout_width="300dp"
+        android:layout_height="250dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:visibility="gone"
+        android:id="@+id/imageview"
+        />
 
     <Button
         android:id="@+id/button"
