--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,6 +24,8 @@
     <dimen name="recyclerHorizHeight">100dp</dimen>
 
 
+    <dimen name="cardHorizItinSize">40dp</dimen>
+
     <dimen name="card_icons">24dp</dimen>
     <dimen name="card_icon_margin_right">7dp</dimen>
     <dimen name="card_numLikes_margin_right">7dp</dimen>
