--- a/app/src/main/res/layout/card_stop.xml
+++ b/app/src/main/res/layout/card_stop.xml
@@ -6,9 +6,8 @@
     android:layout_marginRight="10dp"
     android:layout_marginBottom="@dimen/cardItinPadding"
     android:foreground="?attr/selectableItemBackground"
-    app:cardBackgroundColor="@color/colorBg"
+    android:background="@drawable/rounded_corner_grey_outline"
     app:cardCornerRadius="@dimen/roundCorners"
-    app:cardElevation="@dimen/dropShadowElevation"
     app:cardPreventCornerOverlap="false">
 
 
