--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -11,13 +11,21 @@
         android:layout_height="120dp"
         android:paddingBottom="@dimen/activity_vertical_margin">
 
-        <ImageView
-            android:id="@+id/profile_image"
-            android:layout_width="@dimen/profile_img_size"
-            android:layout_height="@dimen/profile_img_size"
+        <androidx.cardview.widget.CardView
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@mipmap/ic_launcher" />
+            android:id="@+id/profile_image_card"
+            app:cardCornerRadius="80dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/profile_image"
+                android:layout_width="@dimen/profile_img_size"
+                android:layout_height="@dimen/profile_img_size"
+
+                android:background="@drawable/jordan_profile_pic"
+                />
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/profile_name"
