--- a/app/src/main/res/layout/card_itinerary.xml
+++ b/app/src/main/res/layout/card_itinerary.xml
@@ -22,7 +22,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             android:src="@drawable/sceniclookouts" />
 
 
