--- a/app/src/main/res/layout/fragment_display_itin.xml
+++ b/app/src/main/res/layout/fragment_display_itin.xml
@@ -13,7 +13,7 @@
             android:id="@+id/cover_img"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             android:src="@drawable/scenic" />
 
 
